   - Correctly determine compiler type and version (e.g. clang).
   - Correctly set compiler flags according to compiler type and version.
   - Correctly set compiler flags for C++, Java, and Fortran compilers too.
   - Use git to generate the dist archive.  Either use git-archive to
     generate the tarball, or keep using cmake -E tar, but use git-ls-files
     to get the list of files to pack.
   - For Java, add an option to enable/disable the inclusion of the native
     libraries in the jar file, and avoid to duplicate these files.

 Tools:
 * Normalizing pointers addresses tool for better diff between logs

 Examples:
 * Add cloud examples using new VMs
   - examples/msg/cloud/two_tasks_vm.tesh
   - examples/msg/cloud/simple_vm.tesh
   - examples/java/cloud/cloud.tesh
   - examples/java/cloud/migration/migration.tesh

 MSG:
 * Add virtual machine
   - creation of a VM on a PM
   - migration of a VM from a PM to another PM

 Simcalls:
 * Simcalls are now generated by a python script
   - generate files include by simgrid
   - check that all the functions exists and propose prototypes
 * Clean simcalls
   - remove sem_destroy, file_set_data, comm_destroy, vm_set_state,
     host_set_data, host_get_data

 SURF:
 * Translate surf models from C to C++
   - Generic classes for all models: Model, Resource, Action
   - A generic interface for each kind of model (cpu, network, storage
     workstation, workstationvm)
   - C bindings
 * Translate surf routings from C to C++
 * Add callbacks using sigc++ or boost::signals2
   - Add callback functions for resource creation/destruction
   - Add callback finctions for action state change
   - Handle Energy as a plugin
 * Replace swag by boost::intrusive
 * Add new routing model for torus clusters
 * More documentation

 SMPI:
 * hostfiles support host:nb_processes construct to deploy several processes on
   one node
 * Collective communication algorithms should not crash if used with