@@ -115,6 +115,9 @@ message("        Compile MPI testsuite: ${enable_smpi_MPICH3_testsuite}")
 message("        Compile Smpi f77 ....: ${SMPI_F2C}")
 message("        Compile Smpi f90 ....: ${SMPI_F90}")
 message("        Compile Static ......: ${enable_lib_static}")
+if(enable_java)
+  message("        Native lib in jar ...: ${enable_lib_in_jar}")
+endif()
 message("")
 message("        Maintainer mode .....: ${enable_maintainer_mode}")
 message("        Model checking ......: ${HAVE_MC}")
