@@ -13,8 +13,6 @@ SimGrid (3.11) NOT RELEASED; urgency=low
    - Use git to generate the dist archive.  Either use git-archive to
      generate the tarball, or keep using cmake -E tar, but use git-ls-files
      to get the list of files to pack.
-   - For Java, add an option to enable/disable the inclusion of the native
-     libraries in the jar file, and avoid to duplicate these files.
 
  Tools:
  * Normalizing pointers addresses tool for better diff between logs
@@ -59,6 +57,12 @@ SimGrid (3.11) NOT RELEASED; urgency=low
    one node
  * Collective communication algorithms should not crash if used with
    improper number of nodes and report the error.
+
+ Java:
+ * New cmake option, enable_lib_in_jar, to control whether native libraries are
+   copied into simgrid.jar or not (ON by default).  Use this option if you want
+   to reduce the size of the installed simgrid.jar, *and* the native libraries
+   are kept installed elsewhere.
 
  Build System:
  * Supernovae build mode is definitively removed. It was used to improve
